# corrset-benchmark

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md
benches/: benchmark.rs
data/: data-small.json
python/: corrset_numba.py  corrset_polars.py  k_corrset.py  notebook.ipynb  requirements.txt
src/: bchecks.rs  bitset.rs  fused.rs  indexed.rs  ivec.rs  lib.rs  naive.rs  rayon.rs  simd.rs  utils.rs
src/inner/: alloc.rs  basic.rs  bchecks.rs  bitset.rs  imap.rs  indexed.rs  ivec.rs  mod.rs  naive.rs  test_utils.rs
src/outer/: batched.rs  chunked.rs  mod.rs  parallel.rs  serial.rs
