[package]
name = "corrset"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
GSL = "6.0.0"
float-ord = "0.3.2"
fxhash = "0.2.1"
# indexical = "0.3.1"
indexical = {path = "/Users/will/Code/indexical", features = ["simd"]}
itertools = "0.11.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
rand = "0.8.5"
uuid = { version = "1.4.1", features = ["v4"] }
anyhow = "1.0.75"
indicatif = {version = "0.17.7", features = ["rayon"]}
rayon = "1.8.0"
arrayvec = "0.7.4"

[dev-dependencies]
criterion = "0.5.1"

[lib]
bench = false

[[bench]]
name = "benchmark"
harness = false

[[bin]]
name = "gen-data"
bench = false

[[bin]]
name = "top"
bench = false

[profile.release]
debug = true
