[package]
name = "corrset"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
progress = []

[dependencies]
float-ord = "0.3.2"
fxhash = "0.2.1"
indexical = { version = "0.6.0", features = ["simd"] }
itertools = "0.11.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
rand = "0.8.5"
uuid = { version = "1.4.1", features = ["v4"] }
anyhow = "1.0.75"
indicatif = "0.17.7"
rayon = "1.8.0"
arrayvec = "0.7.4"

[dev-dependencies]
criterion = "0.5.1"
maplit = "1.0.2"

[[bench]]
name = "benchmark"
harness = false

[lib]
bench = false

[[bin]]
name = "gen-data"
bench = false

[[bin]]
name = "top"
bench = false

[[bin]]
name = "reuse_bitmask"
bench = false

[profile.release]
debug = true
